# flash-embed

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg  setup.py
flash_embed/: cli.py  config.py
flash_embed/core/backends/: torch_backend.py
flash_embed/core/io/: __init__.py  dali_decoder.py  decoder.py  downloader.py  reader.py
flash_embed/core/models/: __init__.py  model_runner.py  onnx_runner.py  registry.py  tensorrt_runner.py  torch_runner.py  triton_runner.py
flash_embed/core/pipeline/: __init__.py  batcher.py  scheduler.py  workers.py
flash_embed/core/telemetry/: logging.py  metrics.py
flash_embed/core/utils/: affinity.py  env.py  profiling.py
flash_embed/core/writer/: writer.py
