[metadata]
name = flash-embed
version = 0.0.1
description = High-throughput image embedding pipeline
author = ['Femiloye Oyerinde', 'Tomiwa Samuel']
license = MIT

[options]
packages = find:
install_requires =
    braceexpand
    webdataset
    numpy
    pyyaml
    torch
    onnxruntime
    tritonclient[grpc]
    
python_requires = >=3.9

[options.entry_points]
console_scripts =
    flash-embed = flash_embed.cli:main
